# factoring-lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: conversation_notes.md  reading_list.md  research_notes.md
docs/journal/: 2026-03-10_base_sweep_results.md  (+11 more)
paper/: digit_convolution_factoring.aux  digit_convolution_factoring.md  digit_convolution_factoring.out  digit_convolution_factoring.tex  figures_description.md
reports/: base_sweep.csv  encoding_comparison.csv  exact_counting.csv  extended_base_sweep.csv  hybrid_coppersmith.csv  leaked_bits.csv  multi_instance_classical.csv  multi_instance_smt.csv  sos_experiment.csv
scripts/: analyze_multi_instance.py  analyze_scaling.py  base_sweep.py  conditional_correlation_experiment.py  encoding_comparison.py  exact_counting.py  extended_base_sweep.py  hybrid_experiment.py  leaked_bits_experiment.py  multi_instance_benchmark.py  multi_instance_smt.py  rust_vs_python.py  sdp_comparison.py  sos_experiment.py  spectral_recovery_experiment.py  svd_coppersmith_hybrid.py
tests/: test_algorithms.py  test_benchmark.py  test_bp_recovery.py  test_carry_channel.py  test_circuit_sat.py  test_digit_convolution.py  test_digit_convolution_rs.py  test_ecm.py  test_generators.py  test_hybrid_coppersmith.py  test_lattice_convolution.py  test_lattice_counting.py  test_moment_indistinguishability.py  test_prime_gaps.py  test_rounding_hardness.py  test_sdp_convolution.py  test_smt_convolution.py  test_smt_leaked.py  test_sos_relaxation.py  test_spurious_rank1.py  test_svd_coppersmith.py  test_viterbi_recovery.py
(+37 files in other folders)
