[project]
name = "factoring-lab"
version = "0.1.0"
description = "Research harness for studying classical integer factorization bottlenecks"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
analysis = ["pandas", "pyarrow", "matplotlib"]

[project.scripts]
factoring-lab = "factoring_lab.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factoring_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
